-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.9, 6.10
-
None
-
13
-
778371b8e (dev)
-
Foundation Sprint 129, Foundation Sprint 130, Foundation Sprint 131
Even though gRPC provides some leeway as "Access to metadata is language dependent", we have yet to see an implementation which doesn't support multiple values per key. Common implementations like grpc-c++, grpc-go, grpc-java provide this and we should do this aswell.
Ref: https://grpc.io/docs/what-is-grpc/core-concepts/#metadata
For Gerrit Dashboard: QTBUG-136471 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
641650,22 | Deprecate QHash<QBA,QBA> metadata in favor of QMultiHash | dev | qt/qtgrpc | Status: MERGED | +2 | 0 |